--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div class="name">ANGELEE SHAW</div>
         <ul>
             <li><a href="https://www.instagram.com/angeleeshaw_/">INSTAGRAM</a></li>
-            <li><a href="./contact-page/contact.html">CONTACT</a></li>
+            <!-- <li><a href="./contact-page/contact.html">CONTACT</a></li> -->
             <li><a href="index.html">MAIN</a></li>
         </ul>
         <span class="burger"></span>
@@ -32,7 +32,7 @@
     <nav class="mobile">
         <ul>
             <li><a href="https://www.instagram.com/angeleeshaw_/">INSTAGRAM</a></li>
-            <li><a href="./contact-page/contact.html">CONTACT</a></li>
+            <!-- <li><a href="./contact-page/contact.html">CONTACT</a></li> -->
             <li><a href="index.html">MAIN</a></li>
             <li class="close"><span></span></li>
         </ul>
